修改文件结构

--- a/assets/format/tag_list.yml
+++ b/assets/format/tag_list.yml
@@ -12,15 +12,15 @@ tagList:
     format: 1
     interpret: |
       str "密钥索引"
-      见File_Management加密章节
+      详情见File_Management加密章节
   i:
     describe: 对象识别符|identifier
     format: 1
     interpret: |
       str "识别符"
-      见File_Management对象章节
+      详情见File_Management对象章节
   x:
-    describe: 外置信息|extension, 将长信息存入tag_extension.yml, 避免文件名长度过长。
+    describe: 外置信息|extension，将长信息存入tag_extension.yml，避免文件名长度过长。
     format: 1
     interpret: |
       str "索引字符串"
@@ -30,7 +30,7 @@ tagList:
       当x标签值为字符串或列表，将其中各索引字符串作为键，在tag_extension.yml中获取相应的扩展信息。
       当x标签值为字典时，将该字典的一级键视作标签合并入标签串中，字典里的各索引字符串对应的扩展信息并入标签中。
       # 索引字符串
-      将索引字符串作为键, 扩展信息作为值存入tag_extension.yml中。
+      将索引字符串作为键，扩展信息作为值存入tag_extension.yml中。
       索引对应的扩展信息为字符串/列表时，视作x标签的值为该字符串/列表。
       索引对应的扩展信息为字典时，将该字典的一级键视作标签合并入标签串中。
   # 基本属性(时间地点人物事件)
@@ -38,13 +38,12 @@ tagList:
     describe: 时间|time
     format: 1
     interpret: |
-      str "[格式标注前缀_]时间|时间段[_事件标注后缀]"
-      list [*str "[格式标注前缀_][时间|时间段][_事件标注后缀]"]
+      str "[格式标注前缀_]时间|时间段"
+      list [*str "[格式标注前缀_][时间|时间段]"]
       dict {**kwargs "事件":"[格式标注前缀_][时间|时间段]"}
 
       时间默认使用24小时制，阳历。
-      自定义格式添加"p_"前缀(plain)，ISO时间格式添加"i_"前缀，时间戳添加"s_"前缀，阴历添加"l_"前缀(其他格式同阳历)
-      若标注此时间对应的事件，可以在时间/时间段后以"_“分隔，记录事件。
+      默认阳历格式(见下文)不需要前缀，自定义格式添加"p_"前缀(plain)，ISO时间格式添加"i_"前缀，时间戳添加"s_"前缀，阴历添加"l_"前缀(其他格式同阳历)
 
       # 简单示例
         #t=2021-8-28--18-22-6##
@@ -59,23 +58,11 @@ tagList:
         format>"开始时间~结束时间"
         开始时间以其精度范围的起始点为准。(如2021年的起始点是2021年1月1日0时0分0秒000毫秒)
         结束时间若为日期，以其精度范围的结束为准；若为日期时间组合，则以其精度范围的开始为准。
+        没有或不明晰结束时间或开始时间时可以缺省。
 
         exp> "2021-4-11~2022-2-4">--->2021年4月11日0时0分至2022年2月4日23时59分
         exp> "2021-4-11--9~2021-4-11--17">--->2021年4月11日9时0分0秒至2021年4月11日17时0分0秒
       # 高级格式
-        ## 二分时间格式与四分时间格式
-          H和Q是可以加在年、月、(日)、时、分、秒上的限定词
-          H代表二分(Half)，Q代表四分(Quarter)
-          H1代表(年: 1~ 6月|月: 1~15日|日: 0~12时|时: 0~30分|分: 0~30秒|秒:  0~500毫秒)
-          H2代表(年: 7~12月|月:16~31日|日:12~24时|时:30~60分|分:30~60秒|秒:500~1000毫秒)
-          Q1代表(年: 1~ 3月|月:上旬|日:凌晨 0~ 6时|时: 0~15分|分: 0~15秒|秒: 0~250毫秒)
-          Q2代表(年: 4~ 6月|月:中旬|日:上午 6~12时|时:15~30分|分:15~30秒|250~500毫秒)
-          Q3代表(年: 7~ 9月|月:下旬|日:下午12~18时|时:30~45分|分:30~45秒|500~750毫秒)
-          Q4代表(年:10~12月|月:无  |日:夜晚18~24时|时:45~60分|分:45~60秒|750~1000毫秒)
-          
-          exp> "2021-1-1Q1">--->2021年1月1日上午6-12点
-          exp> "2021H1">--->2021年1月至2021年6月
-          exp> "2021Q1~2">--->2021年1月至2021年6月
         ## 时间段省略写法
           当时间段起始与终止时间的前段相同且精度相同时，终止时间可以省略前段(较低精度时间/日期及限定词)。
           exp> "2021-4-11~2021-5-24">--->"2021-4-11~5-24"
@@ -101,7 +88,7 @@ tagList:
     interpret: |
       (RECOMMENDED)
       str "事件"
-      list [*str 事件]
+      list [*str "事件"]
   # 摘要
   h:
     describe: 标题|heading
@@ -109,6 +96,14 @@ tagList:
     interpret: |
       (RECOMMENDED)
       str "标题"
+  f:
+    describe: 特性|feature，描述文件的关键词
+    format: 0
+    interpret: |
+      (RECOMMENDED)
+      [*str "特性"]
+
+      特性是描述文件的关键词，作用类同一般意义上的标签。
   m:
     describe: 注释|message
     format: 0
